# eventcam-converter

./: Cargo.toml  README.md  dvs_event.fbs  vid_frames.sh
data/: events.txt  note.md  sample_25_events.txt
src/: conversion.rs  dvs_event_generated.rs  lib.rs  main.rs
