[package]
name = "eventcam_converter"
version = "0.1.0"
authors = ["tstellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
flatbuffers = "0.6.0"
arrayvec = "0.4.10"
byteorder = "1.3.2"
csv = "1.1.1"


[dependencies.arcstar]
path = "../arcstar"



[dev-dependencies]
assert_approx_eq = "1.1.0"
